<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="childARI"
            type="edu.aku.hassannaqvi.uenhouseholdrapidsurvey.models.ChildARI" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/sectioni2acuterespiratoryinfectionari_mainheading"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- i201  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVi201"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_i201" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/i201" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/i201"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/i20101"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="@{childARI.i201.equals(`1`)}"
                                android:onClick="@{()->childARI.setI201(`1`)}"
                                android:text="@string/i20101" />

                            <RadioButton
                                android:id="@+id/i20102"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="@{childARI.i201.equals(`2`)}"
                                android:onClick="@{()->childARI.setI201(`2`)}"
                                android:text="@string/i20102" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- i202  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVi202"
                    style="@style/cardView"
                    android:visibility="@{childARI.i201.equals(`2`)? View.GONE : View.VISIBLE}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_i202" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/i202" />

                        </LinearLayout>

                        <TextView
                            style="@style/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/i202t" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i20201" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/i20201"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/i20201"
                            android:inputType="number"
                            android:maxLength="2"
                            android:text="@={childARI.i20201}"
                            app:maxValue="10"
                            app:minValue="0"
                            app:type="range" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- i202a  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVi202a"
                    style="@style/cardView"
                    android:visibility="@{childARI.i201.equals(`2`)? View.GONE : View.VISIBLE}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_i102a" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/i102a" />

                            <TextView
                                android:layout_width="115dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="Line Number" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/i202a"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:minHeight="56dp"
                                android:prompt="@string/i202a"
                                android:spinnerMode="dropdown" />

                            <TextView
                                android:id="@+id/i202ano"
                                style="@style/textView"
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:gravity="center" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:background="@color/red_overlay"
                        android:elevation="20dp"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:background="@color/green_overlay"
                        android:elevation="20dp"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white" />

                </LinearLayout>
                <!--EndButton LinearLayout-->


            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</layout>