<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />
        <variable
            name="form"
            type="edu.aku.hassannaqvi.uenhouseholdrapidsurvey.models.Form" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitle="@string/as1"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/atitle"
            app:titleTextAppearance="@style/Toolbar.TitleText" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- a104 CountrySpinner   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVa104"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/a104" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/a104"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="56dp"
                            android:prompt="@string/a104"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- a105 DistrictSpinner   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVa105"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/a105" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/a105"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="56dp"
                            android:prompt="@string/a105"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- a106 TehsilSpinner   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVa106"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/a106" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/a106"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="56dp"
                            android:prompt="@string/a106"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- a107 UCSpinner   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVa107"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/a107" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/a107"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="56dp"
                            android:prompt="@string/a107"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- a109 VillageSpinner   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVas1q09"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/a109" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/a109"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="56dp"
                            android:prompt="@string/a109"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!-- a101  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVas1q08"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/a101" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/a101"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="#######"
                            android:inputType="number"
                            android:maxLength="7"
                            app:maxValue="9999999"
                            app:minValue="1111111"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="100dp"
                    android:orientation="horizontal"
                    android:padding="24dp">


                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/capsule"
                        android:backgroundTint="@color/colorAccent"
                        android:backgroundTintMode="src_atop"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />

                </LinearLayout>
                <!--EndButton LinearLayout-->


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>